# easyorage

./: .gitignore  CAPE_RESEARCH_SUMMARY.md  COMPLETE_REFERENCES.bibtex  DISCOVERIES.md  FEATURE_ENGINEERING_SPEC.md  LITERATURE_REVIEW_2023-2025.md  NEURAL_TPP_RESEARCH.md  PAPERS_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_RESEARCH.md  RESEARCH_FINDINGS_SUMMARY.txt  RESEARCH_INDEX.md  SCRIPT.md  TPP_IMPLEMENTATION_GUIDE.md  TPP_QUICK_REFERENCE.md  presentation.html
backend/: config.py  main.py  pyproject.toml
backend/routers/: airports.py  ws.py
backend/services/: data_loader.py  model_service.py  replay_engine.py
backend/tests/: test_airports.py
data/processed/: ajaccio_eval.parquet  ajaccio_train.parquet  bastia_eval.parquet  bastia_train.parquet  biarritz_eval.parquet  biarritz_train.parquet  feature_cols.json  nantes_eval.parquet  nantes_train.parquet  pise_eval.parquet  pise_train.parquet
data/terrain/: dem_advanced_features.json  terrain_features.json
docs/research/: literature.md  tpp_notes.md
docs/specs/: quick_ref.md
frontend/: components.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  (+1 more)
notebooks/: 01_eda.py  02_modeling.py  03_experiments.py  04_sequential.py
scripts/: check_overfit.py  compute_dem_features.py  compute_features.py  eval_silence_strategy.py  fetch_terrain.py  fetch_weather.py  generate_predictions.py  test_ili_strategies.py  test_realtime_strategies.py  test_silence_fallback.py  test_strategies.py  train_gru.py  train_optuna_gain.py  train_optuna_silence.py  train_optuna_xgb.py
(+20 files in other folders)
