[project]
name = "easyorage-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "polars>=1.0",
    "numpy<2",
    "xgboost>=2.0",
    "scikit-learn>=1.5",
    "joblib>=1.3",
    "pyarrow>=14.0",
    "pandas>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
