[project]
name = "easyorage-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "polars>=1.0",
    "numpy<2",
    "xgboost>=2.0",
    "scikit-learn>=1.5",
    "joblib>=1.3",
    "pyarrow>=14.0",
    "pandas>=2.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = [".."]
